# inspy

./: Makefile  README.md  pyproject.toml
docker/: Dockerfile  Makefile
src/inspy/: cli.py
